# abim

./: .gitignore  AUTHORS  Makefile.am  README.md  TODO  configure.ac  main.c  main.cpp
doc/: code-conventions
include/: core.h  data-types.h  draw.h  object.h  world.h
include/shader/: fragment-shader.h  vertex-shader.h
soil/: Makefile.am  README
src/: core.c  core.cpp  draw.c  draw.cpp  object.cpp  world.cpp
src/shader/: fragment-shader.cpp  vertex-shader.cpp
